test and search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,6 @@
     "python.testing.unittestEnabled": false, // ms-python.python
     "python.testing.pytestEnabled": true,
     "python.testing.pytestArgs": [], // -x to bail
-    "python.linting.flake8Enabled": true,
-    "python.linting.mypyEnabled": true,
-    "python.linting.pylintArgs": [
-      "--load-plugins=pylint_django",
-      "--errors-only"
-    ],
     "python.formatting.autopep8Args": ["--indent-size=4"],
     "python.defaultInterpreterPath": "venv/bin/python",
     "[python]": {
@@ -38,6 +32,9 @@
         "comments": true,
         "strings": true
       }
+    },
+    "[mypy-django.*]": {
+      "ignore_missing_imports": true
     },
     "files.associations": {
       "*.js": "javascript",
